crates/ao-tui/tests/snapshots/test_confirm_dialog__confirm_destroy.snap
---
source: crates/ao-tui/tests/test_confirm_dialog.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│                          ││ No slot selected                                 │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          │└──────────────────────────────────────────────────┘"
"│                          │┌ Agent Log [L] toggle ────────────────────────────┐"
"│                   ┌ Confirm ─────────────────────────────┐                   │"
"│                   │                                      │                   │"
"│                   │                                      │                   │"
"│                   └──────────────────────────────────────┘                   │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]op-in [L]og [M]ultipl"
