crates/ao-tui/tests/snapshots/test_confirm_dialog__confirm_quit.snap
---
source: crates/ao-tui/tests/test_confirm_dialog.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│                          ││ No slot selected                                 │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          │└──────────────────────────────────────────────────┘"
"│                          │┌ Agent Log [L] toggle ────────────────────────────┐"
"│                   ┌ Confirm ─────────────────────────────┐                   │"
"│                   │                                      │                   │"
"│                   │                                      │                   │"
"│                   └──────────────────────────────────────┘                   │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]term [L]og [M]ultiple"
